--- a/common/encryption-utils/pom.xml
+++ b/common/encryption-utils/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com.mmadu</groupId>
     <artifactId>encryption-utils</artifactId>
     <version>2.0.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>13</source>
+                    <target>13</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <name>encryption-utils</name>
     <description>Encryption components for mmadu project</description>
