--- a/mmadu-token-service/pom.xml
+++ b/mmadu-token-service/pom.xml
@@ -5,17 +5,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mmadu</groupId>
     <artifactId>mmadu-token-service</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>mmadu-token-service</name>
     <description>Token Service for Mmadu Tools</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>14</java.version>
     </properties>
 
     <dependencies>
@@ -45,7 +47,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>encryption-utils</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
@@ -68,7 +70,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>security-utils</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
@@ -82,30 +84,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <configuration>
-                    <imageName>geraldoyudo/${project.name}</imageName>
-                    <baseImage>openjdk:8u212-jdk-alpine3.9</baseImage>
-                    <entryPoint>["java", "-jar", "./${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>
-                        <expose>8080</expose>
-                    </exposes>
-                    <imageTags>
-                        <imageTag>${project.version}</imageTag>
-                    </imageTags>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                    <serverId>docker-hub</serverId>
-                </configuration>
             </plugin>
         </plugins>
     </build>
