--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -15,7 +15,10 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>14</java.version>
+        <spring-boot.build-image.imageName>geraldoyudo/${project.artifactId}:${project.version}</spring-boot.build-image.imageName>
     </properties>
 
     <dependencies>
@@ -67,6 +70,18 @@
             <groupId>com.mmadu</groupId>
             <artifactId>security-utils</artifactId>
             <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator-annotation-processor</artifactId>
         </dependency>
     </dependencies>
 
