--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,11 @@ matrix:
     install: mvn clean
     script:
     - mvn install
-    - mvn spring-boot:build-image -pl mmadu-user-service,mmadu-token-service,mmadu-registration -DskipTests
+    - mvn spring-boot:build-image -pl mmadu-user-service,mmadu-token-service,mmadu-registration,mmadu-identity -DskipTests
     - cd ./docker/heroku-test/token-service && heroku container:login && ./build.sh && heroku container:release web --app mmadu-token-service && cd ../../../
     - cd ./docker/heroku-test/user-service && heroku container:login && ./build.sh && heroku container:release web --app mmadu-user-service && cd ../../../
     - cd ./docker/heroku-test/user-registration && heroku container:login && ./build.sh && heroku container:release web --app mmadu-registration && cd ../../../
+    - cd ./docker/heroku-test/identity && heroku container:login && ./build.sh && heroku container:release web --app mmadu-identity && cd ../../../
   - language: java
     name: "Package Releases"
     jdk:
