--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -108,7 +108,10 @@
             <artifactId>commons-io</artifactId>
             <version>2.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
