--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -71,11 +71,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.mmadu</groupId>
-            <artifactId>security-utils</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
@@ -111,6 +106,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
