--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>8.17.1</version>
+        </dependency>
     </dependencies>
 
     <build>
