--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>8.17.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
