--- a/mmadu-identity/src/main/resources/application.yml
+++ b/mmadu-identity/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     rest:
       base-path: /admin/repo
 
+management:
+  endpoints:
+    web:
+      base-path: /admin/actuator
+
 mmadu:
   domainKey: 2222
   tokenService:
