--- a/mmadu-identity/src/main/resources/application.yml
+++ b/mmadu-identity/src/main/resources/application.yml
@@ -7,7 +7,8 @@ management:
   endpoints:
     web:
       base-path: /admin/actuator
-
+      exposure:
+        include: health, info, caches
 mmadu:
   domainKey: 2222
   tokenService:
