FEATURE-51:  Add group details in authorization (#57)
* added property for groups

* added groups to authorization

* added actuator

* fixed tests

--- a/mmadu-identity/src/main/resources/application.yml
+++ b/mmadu-identity/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring:
     rest:
       base-path: /admin/repo
 
+management:
+  endpoints:
+    web:
+      base-path: /admin/actuator
+      exposure:
+        include: health, info, caches
 mmadu:
   domainKey: 2222
   tokenService:
