implemented client and user authentication strategies

--- a/common/security-utils/pom.xml
+++ b/common/security-utils/pom.xml
@@ -73,5 +73,10 @@
             <artifactId>spring-security-oauth2-resource-server</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
