--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -106,6 +106,11 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu</groupId>
+            <artifactId>security-utils</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
