--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -135,6 +135,10 @@
             <artifactId>security-utils</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
