--- a/mmadu-identity/src/main/resources/application.yml
+++ b/mmadu-identity/src/main/resources/application.yml
@@ -2,7 +2,18 @@ spring:
   data:
     rest:
       base-path: /admin/repo
-
+  security:
+    oauth2:
+      client:
+        registration:
+          mmadu:
+            client-id: ${MMADU_ADMIN_CLIENT:5f65d0cd-6103-4838-9766-9132589e7e89}
+            client-secret: ${MMADU_ADMIN_CLIENT_SECRET:113232323}
+            authorization-grant-type: client_credentials
+            scope: a.*.**, r.*.**
+        provider:
+          mmadu:
+            token-uri: http://localhost:${server.port}/clients/token
 management:
   endpoints:
     web:
@@ -15,3 +26,4 @@ mmadu:
     url: http://localhost:10082
   userService:
     url: http://localhost:10080
+
