--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -7,6 +7,18 @@ spring:
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
+  security:
+    oauth2:
+      client:
+        registration:
+          mmadu:
+            client-id: ${MMADU_ADMIN_CLIENT:5f65d0cd-6103-4838-9766-9132589e7e89}
+            client-secret: ${MMADU_ADMIN_CLIENT_SECRET:113232323}
+            authorization-grant-type: client_credentials
+            scope: a.*.**, r.*.**
+        provider:
+          mmadu:
+            token-uri: http://localhost:10084/clients/token
 mmadu:
   home: ${user.home}/mmadu
   domainKey: 2222
