--- a/mmadu-user-service/src/main/resources/application.yml
+++ b/mmadu-user-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ mmadu:
   security:
     master-key: 11111111111111111111111111111111
     domain-parsing:
-      path-keys: domain,domainId,appDomains
+      path-keys: domain,domainId,domains,appDomains
   tokenService:
     url: http://localhost:10082
   domainKey: 2222
