--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -139,6 +139,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
