improved login page

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,19 @@
     <modules>
         <module>encryption-utils</module>
         <module>security-utils</module>
+        <module>theme-utils</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
