--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -144,6 +144,11 @@
             <artifactId>bootstrap</artifactId>
             <version>4.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu</groupId>
+            <artifactId>theme-utils</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
