--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
       dist: trusty
       install: mvn clean
       script: mvn -q install
-      if: branch = develop OR branch =~ ^mmadu\/.*$
+      if: branch != master
       deploy:
         - provider: releases
           api_key: "$GITHUB_OAUTH_TOKEN"
