--- a/docs/_data/guides.yml
+++ b/docs/_data/guides.yml
@@ -1,2 +1,2 @@
-- name: getting-started-java
-  title: Getting Started With Java
+- name: user-auth-mmadu-springboot
+  title: Authentication - Getting Started with Mmadu And Springboot
