--- a/docs/_data/references.yml
+++ b/docs/_data/references.yml
@@ -1,6 +1,8 @@
 - name: api-documentation
-  title: Api Convention Documentation
+  title: Api Convention Reference
 - name: user-management
-  title: Mmadu User Service Documentation
+  title: Mmadu User Service Reference
 - name: registration
-  title: Mmadu Registration Service Documentation
+  title: Mmadu Registration Service Reference
+- name: identity
+  title: Mmadu Identity Service Reference
