--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     environment:
       - MMADU_IDENTITY_DB_HOST=mongodb
       - MMADU_USER_URL=http://mmadu-user-service:8080
+      - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
+      - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
     ports:
       - "15553:8080"
