--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     image: geraldoyudo/mmadu-user-service:2.0.0-SNAPSHOT
     environment:
       - MMADU_USER_DB_HOST=mongodb
+      - MMADU_USER_DB_NAME=${MMADU_USER_DB_NAME:mmadu_db}
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
       - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
       - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
+      - MMADU_ADMIN_USERNAME=${MMADU_ADMIN_USERNAME:admin}
+      - MMADU_ADMIN_PASSWORD=${MMADU_ADMIN_PASSWORD:password}
     ports:
       - "15551:8080"
     depends_on:
@@ -17,6 +20,7 @@ services:
     environment:
       - MMADU_USER_URL=http://mmadu-user-service:8080
       - MMADU_REGISTRATION_DB_HOST=mongodb
+      - MMADU_REGISTRATION_DB_NAME=${MMADU_REGISTRATION_DB_NAME:mmadu_db}
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
       - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
       - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
@@ -32,6 +36,7 @@ services:
     image: geraldoyudo/mmadu-identity:2.0.0-SNAPSHOT
     environment:
       - MMADU_IDENTITY_DB_HOST=mongodb
+      - MMADU_IDENTITY_DB_NAME=${MMADU_IDENTITY_DB_NAME:mmadu_db}
       - MMADU_USER_URL=http://mmadu-user-service:8080
       - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
       - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
