--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -4,13 +4,12 @@ services:
     image: geraldoyudo/mmadu-user-service:2.0.0-SNAPSHOT
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - MMADU_USER_DB_HOST=mongodb
-      - MMADU_USER_DB_NAME=${MMADU_USER_DB_NAME:mmadu_db}
+      - MMADU_USER_DB_URI=mongodb://mongodb/mmadu_db
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
-      - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
-      - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
-      - MMADU_ADMIN_USERNAME=${MMADU_ADMIN_USERNAME:admin}
-      - MMADU_ADMIN_PASSWORD=${MMADU_ADMIN_PASSWORD:password}
+      - MMADU_ADMIN_CLIENT=mmadu_admin
+      - MMADU_ADMIN_SECRET=1234567890
+      - MMADU_ADMIN_USERNAME=admin
+      - MMADU_ADMIN_PASSWORD=password
     ports:
       - "15551:8080"
     depends_on:
@@ -21,13 +20,14 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - MMADU_USER_URL=http://mmadu-user-service:8080
-      - MMADU_REGISTRATION_DB_HOST=mongodb
-      - MMADU_REGISTRATION_DB_NAME=${MMADU_REGISTRATION_DB_NAME:mmadu_db}
+      - MMADU_REGISTRATION_DB_URI=mongodb://mongodb/mmadu_db
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
-      - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
-      - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
-      - MMADU_REGISTRATION_ROOT_DIR=/root/mmadu
-      - MMADU_APPLICATION_URL=${MMADU_APPLICATION_URL:http://localhost:8080}
+      - MMADU_ADMIN_CLIENT=mmadu_admin
+      - MMADU_ADMIN_SECRET=1234567890
+      - MMADU_REGISTRATION_ROOT_DIR=/home/mmadu
+      - MMADU_APPLICATION_URL=http://localhost:8080
+    volumes:
+      - /home/mmadu:/home/mmadu:rw
     ports:
       - "15552:8080"
     depends_on:
@@ -38,13 +38,12 @@ services:
     image: geraldoyudo/mmadu-identity:2.0.0-SNAPSHOT
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - MMADU_IDENTITY_DB_HOST=mongodb
-      - MMADU_IDENTITY_DB_NAME=${MMADU_IDENTITY_DB_NAME:mmadu_db}
+      - MMADU_IDENTITY_DB_URI=mongodb://mongodb/mmadu_db
       - MMADU_USER_URL=http://mmadu-user-service:8080
-      - MMADU_ADMIN_CLIENT=${MMADU_ADMIN_CLIENT:mmadu_admin}
-      - MMADU_ADMIN_SECRET=${MMADU_ADMIN_SECRET:1234567890}
+      - MMADU_ADMIN_CLIENT=mmadu_admin
+      - MMADU_ADMIN_SECRET=1234567890
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
-      - MMADU_APPLICATION_URL=${MMADU_APPLICATION_URL:http://localhost:8080}
+      - MMADU_APPLICATION_URL=http://localhost:8080
     ports:
       - "15553:8080"
     depends_on:
