added different getting started

--- a/docs/_data/guides.yml
+++ b/docs/_data/guides.yml
@@ -1,2 +1,4 @@
+- name: creating-your-first-domain
+  title: Creating Your First Domain
 - name: user-auth-mmadu-springboot
   title: Authentication - Getting Started with Mmadu And Springboot
