fixed folder write issue

--- a/mmadu-registration/src/test/resources/application.yml
+++ b/mmadu-registration/src/test/resources/application.yml
@@ -24,4 +24,4 @@ mmadu:
     url: http://localhost:10080
   registration:
     home: ${mmadu.home}/registration
-    templates: ${mmadu.registration.home}/templates
+    templates: file:${mmadu.registration.home}/templates
