--- a/common/theme-utils/pom.xml
+++ b/common/theme-utils/pom.xml
@@ -5,6 +5,6 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mmadu</groupId>
     <artifactId>theme-utils</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
 </project>
