configured dev environment for transactions

--- a/mmadu-registration/src/main/resources/application-dev.yml
+++ b/mmadu-registration/src/main/resources/application-dev.yml
@@ -1,5 +1,4 @@
 spring:
   data:
     mongodb:
-      database: mmadu_registration_db
-      host: localhost
+      uri: mongodb://localhost:27017/mmadu_registration_db?replicaSet=default-replica-set
