--- a/mmadu-identity/src/main/resources/application-dev.yml
+++ b/mmadu-identity/src/main/resources/application-dev.yml
@@ -1,5 +1,4 @@
 spring:
   data:
     mongodb:
-      database: mmadu_identity_db
-      host: localhost
+      uri: mongodb://localhost:27017/mmadu_identity_db?replicaSet=default-replica-set
