--- a/mmadu-user-service/src/main/resources/application.yml
+++ b/mmadu-user-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 mmadu:
+  transactions:
+    enabled: true
   admin:
     username: ${MMADU_ADMIN_USERNAME:admin}
     password: ${MMADU_ADMIN_PASSWORD:password}
