added default replica set to default config

--- a/mmadu-user-service/src/main/resources/application.yml
+++ b/mmadu-user-service/src/main/resources/application.yml
@@ -34,3 +34,6 @@ mmadu:
 spring:
   main:
     allow-bean-definition-overriding: true
+  data:
+    mongodb:
+      replica-set-name: default-replica-set
