fixed default config

--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      replica-set-name: default-replica-set
+      uri: mongodb://localhost:27017/mmadu_db?replicaSet=default-replica-set
     rest:
       base-path: /repo
   main:
