--- a/mmadu-registration/src/main/resources/application-prod.yml
+++ b/mmadu-registration/src/main/resources/application-prod.yml
@@ -88,14 +88,21 @@ mmadu:
           max: 2020-08-19T13:45:00
       domains:
         - domainId: 0
-          registrationProfile:
-            defaultRedirectUrl: ${mmadu.application.ui}
-            headerOne: Mmadu
-            headerThree: Register
-            instruction: Fill all the fields to register
-            submitButtonTitle: GO!!
+          registration-profiles:
+            - defaultRedirectUrl: https://google.com
+              code: user
+              headerOne: Mmadu
+              headerThree: Register
+              instruction: Fill all the fields to register
+              submitButtonTitle: GO!!
+              fields:
+                - mmadu.field.email
+                - mmadu.field.full_name
+                - mmadu.field.username
+                - mmadu.field.password
           fields:
             - name: email
+              code: mmadu.field.email
               placeholder: Email
               property: email
               fieldTypeId: mmadu.fields.email
@@ -103,6 +110,7 @@ mmadu:
               order: 1
               required: true
             - name: full-name
+              code: mmadu.field.full_name
               placeholder: Full Name
               property: fullName
               fieldTypeId: mmadu.fields.text
@@ -110,6 +118,7 @@ mmadu:
               order: 2
               required: true
             - name: username
+              code: mmadu.field.username
               placeholder: Username
               property: username
               fieldTypeId: mmadu.fields.text
@@ -117,6 +126,7 @@ mmadu:
               order: 3
               required: true
             - name: password
+              code: mmadu.field.password
               placeholder: Password
               property: password
               fieldTypeId: mmadu.fields.password
