created notification service shell

--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,6 @@
         <module>mmadu-user-service</module>
         <module>mmadu-registration</module>
         <module>mmadu-identity</module>
+        <module>mmadu-notifications</module>
     </modules>
 </project>
