--- a/mmadu-notifications/pom.xml
+++ b/mmadu-notifications/pom.xml
@@ -44,6 +44,20 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu.notifications</groupId>
+            <artifactId>notification-endpoint</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mmadu.notifications</groupId>
+            <artifactId>sendgrid-notification-provider</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
