--- a/notifications/sendgrid-notification-provider/pom.xml
+++ b/notifications/sendgrid-notification-provider/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mmadu.notifications</groupId>
-    <artifactId>notification-endpoint</artifactId>
+    <artifactId>sendgrid-notification-provider</artifactId>
     <version>2.0.3-SNAPSHOT</version>
 
     <properties>
@@ -29,18 +29,13 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>com.mmadu.notifications</groupId>
+            <artifactId>notification-endpoint</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor.netty</groupId>
-            <artifactId>reactor-netty</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
 </project>
