FEATURE-137: Implemented Notification Provider (#138)
* created notification service shell

* added notification provider endpoint

* set up notification provider architecture

* tested providers

* tested notification api

* implemented sendgrid dynamic template provider

* fixed pom

* added deployment for mmadu notifications

* removed sendgrid api key from configuration

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
 
     <modules>
         <module>common</module>
+        <module>notifications</module>
         <module>mmadu-user-service</module>
         <module>mmadu-registration</module>
         <module>mmadu-identity</module>
+        <module>mmadu-notifications</module>
     </modules>
 </project>
