created event bus

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,7 @@
         <module>encryption-utils</module>
         <module>security-utils</module>
         <module>theme-utils</module>
+        <module>event-bus</module>
     </modules>
 
     <build>
