fixed issues and tested validation controller

--- a/mmadu-otp/src/main/resources/application.yml
+++ b/mmadu-otp/src/main/resources/application.yml
@@ -40,3 +40,9 @@ mmadu:
               value: 24
             type: alphanumeric
             otpLength: 20
+          - identifier: property-validation
+            otpValidity:
+              timeUnit: HOURS
+              value: 24
+            type: numeric
+            otpLength: 8
