--- a/mmadu-notifications/src/main/resources/application.yml
+++ b/mmadu-notifications/src/main/resources/application.yml
@@ -50,3 +50,13 @@ mmadu:
             eventTriggers:
               - user.password.reset.initiation
             messageTemplate: d-197bd78523584a3a8ff97424c98a3269
+          - type: email
+            eventTriggers:
+              - user.validation.property.email
+            messageTemplate:  d-d5aab7b34c6a4ef58b00264f6ce0ff1a
+            destinationProperty: "propertyName"
+          - type: sms
+            eventTriggers:
+              - user.validation.property.sms
+            messageTemplate: "message template"
+            destinationProperty: "propertyName"
